# xwinwm-hack

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  TODO  config.h.in  configure  configure.ac  mkinstalldirs
doc/: Makefile  Makefile.am  Makefile.in  xwinwm.1  xwinwm.1.in
doc/ja_JP/: Makefile  Makefile.am  Makefile.in  xwinwm.1
nls/: Makefile  Makefile.am  Makefile.in
nls/C/: Makefile  Makefile.in  blackbox.cat
nls/da_DK/: Makefile  Makefile.in  blackbox.cat
nls/de_DE/: Makefile  Makefile.in  blackbox.cat
nls/es_AR/: Makefile  Makefile.in  blackbox.cat
nls/es_ES/: Makefile  Makefile.in
nls/et_EE/: Makefile  Makefile.in
nls/fr_FR/: Makefile  Makefile.in
nls/hu_HU/: Makefile  Makefile.in
nls/it_IT/: Makefile  Makefile.in
nls/ja_JP/: Makefile.in
nls/ko_KR/: Makefile  Makefile.in
nls/nl_NL/: Makefile  Makefile.in
nls/no_NO/: Makefile  Makefile.in
nls/pl_PL/: Makefile  Makefile.in
nls/pt_BR/: Makefile  Makefile.in
nls/ro_RO/: Makefile  Makefile.in
nls/ru_RU/: Makefile  Makefile.in
nls/sk_SK/: Makefile  Makefile.in
nls/sl_SI/: Makefile  Makefile.in
nls/sv_SE/: Makefile  Makefile.in
nls/tr_TR/: Makefile  Makefile.in
nls/uk_UA/: Makefile  Makefile.in
nls/zh_CN/: Makefile  Makefile.in
nls/zh_TW/: Makefile  Makefile.in
src/: BaseDisplay.cc  BaseDisplay.hh  Color.cc  Color.hh  GCCache.cc  GCCache.hh  Makefile.am  Makefile.in  Netizen.cc  Netizen.hh  Screen.cc  Screen.hh  Timer.cc  Timer.hh  Util.cc  Util.hh  Window.cc  Window.hh  Workspace.cc  Workspace.hh  blackbox.cc  blackbox.cc.in  blackbox.hh  i18n.cc  i18n.hh  main.cc
